Страница поиска (расширенный поиск).

--- a/app/category.html
+++ b/app/category.html
@@ -656,7 +656,7 @@
                                         <div class="dropdown-container">
                                             <div class="container-body">
                                                 <ul class="select-list">
-                                                    <li data-value="published_at selected">
+                                                    <li data-value="published_at" class="selected">
                                                         <i class="fa fa-calendar-o"></i>
                                                         <span>дате</span>
                                                     </li>
