Бортовой журнал (создание html страницы, ссылки на страницу).

--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -88,7 +88,7 @@
                 <li><a href="category.html"><span>Советы</span></a></li>
                 <li><a href="category.html"><span>Гараж</span></a></li>
                 <li><a href="questions.html"><span>Вопрос-ответ</span></a></li>
-                <li><a href="#"><span>Бортовой журнал</span></a></li>
+                <li><a href="articles.html"><span>Бортовой журнал</span></a></li>
             </ul>
 
             <div class="title">Информация</div>
@@ -2635,7 +2635,7 @@
                                 <li><a href="category.html">Советы</a></li>
                                 <li><a href="category.html">Гараж</a></li>
                                 <li><a href="questions.html">Вопрос-ответ</a></li>
-                                <li><a href="#">Бортовой журнал</a></li>
+                                <li><a href="articles.html">Бортовой журнал</a></li>
                             </ul>
                         </nav>
                     </div>
