Профиль пользователя (статистика - первая версия).

--- a/app/profile.html
+++ b/app/profile.html
@@ -647,9 +647,9 @@
                             <!--</div>-->
 
                             <div class="item rating">
-                                <!--<span>Рейтинг:</span>-->
-                                <i class="fa fa-signal" title="Рейтинг"></i>
-                                <span class="count">31 416</span>
+                                <span>Рейтинг:</span>
+                                <!--<i class="fa fa-signal" title="Рейтинг"></i>-->
+                                <span class="count">1 416</span>
                             </div>
                         </div>
 
@@ -657,23 +657,23 @@
                             <!-- иконка не закрашена, если 0 -->
                             <a href="profile-articles.html" class="item articles">
                                 <span class="count">127</span>
-                                <i class="fa fa-file-text" title="Статьи"></i>
-                                <!--<span>статей</span>-->
+                                <!--<i class="fa fa-file-text" title="Статьи"></i>-->
+                                <span>статей</span>
                             </a>
                             <a href="profile-questions.html" class="item questions">
-                                <span class="count">354</span>
-                                <i class="fa fa-question" title="Вопросы"></i>
-                                <!--<span>вопроса</span>-->
+                                <span class="count">54</span>
+                                <!--<i class="fa fa-question" title="Вопросы"></i>-->
+                                <span>вопроса</span>
                             </a>
                             <a href="profile-answers.html" class="item answers">
-                                <span class="count">12 933</span>
-                                <i class="fa fa-comments" title="Ответы"></i>
-                                <!--<span>ответов</span>-->
+                                <span class="count">933</span>
+                                <!--<i class="fa fa-comments" title="Ответы"></i>-->
+                                <span>ответов</span>
                             </a>
                             <a href="profile-comments.html" class="item comments">
-                                <span class="count">33 245</span>
-                                <i class="fa fa-comment" title="комментарии"></i>
-                                <!--<span>комментариев</span>-->
+                                <span class="count">3 245</span>
+                                <!--<i class="fa fa-comment" title="комментарии"></i>-->
+                                <span>комментариев</span>
                             </a>
                         </div>
                     </div>
