--- a/app/index.html
+++ b/app/index.html
@@ -381,7 +381,7 @@
                                                     <li><a href="profile-articles.html"><i class="fa fa-book"></i><span>Журнал</span></a></li>
                                                     <li><a href="profile-comments.html"><i class="fa fa-comment"></i><span>Комментарии</span></a></li>
                                                     <li><a href="profile-answers.html"><i class="fa fa-comments"></i><span>Ответы</span></a></li>
-                                                    <li><a href="profile-messages.html"><i class="fa fa-plane"></i><span>Сообщения</span></a></li>
+                                                    <li><a href="profile-messages.html"><i class="fa fa-paper-plane"></i><span>Сообщения</span></a></li>
                                                     <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
                                                     <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
                                                     <li><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
