--- a/app/profile-notifications.html
+++ b/app/profile-notifications.html
@@ -367,24 +367,17 @@
                                             <i class="fa fa-bars"></i>
                                         </a>
                                         <div class="dropdown-container">
-                                            <div class="container-header">
-                                                <a href="profile.html" class="title">
-                                                    <i class="fa fa-user"></i>
-                                                    Мой профиль
-                                                </a>
-                                            </div>
-                                            <div class="delimiter"></div>
                                             <div class="container-body">
                                                 <ul class="menu user-menu">
+                                                    <li><a href="profile.html"><i class="fa fa-user"></i><span>Профиль</span></a></li>
                                                     <li><a href="profile-cars.html"><i class="fa fa-car"></i><span>Автомобили</span></a></li>
                                                     <li><a href="profile-questions.html"><i class="fa fa-question-circle"></i><span>Вопросы</span></a></li>
                                                     <li><a href="profile-articles.html"><i class="fa fa-book"></i><span>Журнал</span></a></li>
                                                     <li><a href="profile-comments.html"><i class="fa fa-comment"></i><span>Комментарии</span></a></li>
                                                     <li><a href="profile-answers.html"><i class="fa fa-comments"></i><span>Ответы</span></a></li>
-                                                    <li><a href="profile-messages.html"><i class="fa fa-plane"></i><span>Сообщения</span></a></li>
                                                     <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
                                                     <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
-                                                    <li class="active"><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                                    <li><a href="profile-friends.html"><i class="fa fa-handshake-o"></i><span>Друзья</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -552,7 +545,7 @@
                     <div class="white-section m-b-30">
                         <div id="user-menu-section">
                             <ul class="menu user-menu">
-                                <li class="active"><a href="profile.html"><i class="fa fa-user"></i><span>Профиль</span></a></li>
+                                <li><a href="profile.html"><i class="fa fa-user"></i><span>Профиль</span></a></li>
                                 <li><a href="profile-cars.html"><i class="fa fa-car"></i><span>Автомобили</span></a></li>
                                 <li><a href="profile-questions.html"><i class="fa fa-question-circle"></i><span>Вопросы</span></a></li>
                                 <li><a href="profile-articles.html"><i class="fa fa-book"></i><span>Журнал</span></a></li>
@@ -561,7 +554,8 @@
                                 <li><a href="profile-messages.html"><i class="fa fa-paper-plane"></i><span>Сообщения</span></a></li>
                                 <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
                                 <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
-                                <li><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                <li class="active"><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                <li><a href="profile-friends.html"><i class="fa fa-handshake-o"></i><span>Друзья</span></a></li>
                             </ul>
                         </div>
                         <div id="user-content-section">
@@ -714,49 +708,49 @@
                                     </div>
                                     <div class="list">
                                         <div class="item notification">
-                                            <a href="#">
+                                            <div>
                                                 <i class="fa fa-thumbs-up info"></i>
                                                 <span class="small-text date">25 мин. назад</span>
                                                 <span class="text">
-                                            Пользователю Support понравилась ваша статья.
-                                        </span>
-                                            </a>
+                                                    Пользователю <a href="profile.html">Support</a> понравилась ваша статья.
+                                                </span>
+                                            </div>
                                             <a href="#" class="delete-button">
                                                 <i class="fa fa-close"></i>
                                             </a>
                                         </div>
                                         <div class="item notification">
-                                            <a href="#">
+                                            <div>
                                                 <i class="fa fa-comment success"></i>
                                                 <span class="small-text date">1 ч. назад</span>
                                                 <span class="text">
-                                            Роман (roman@email.com) оставил комментарий к вашей статье.
-                                        </span>
-                                            </a>
+                                                    Роман (roman@email.com) оставил комментарий к вашей статье.
+                                                </span>
+                                            </div>
                                             <a href="#" class="delete-button">
                                                 <i class="fa fa-close"></i>
                                             </a>
                                         </div>
                                         <div class="item notification">
-                                            <a href="#">
+                                            <div>
                                                 <i class="fa fa-user-plus success"></i>
                                                 <span class="small-text date">16 ч. назад</span>
                                                 <span class="text">
-                                            Зарегистрировался новый пользователь Denwebart.
-                                        </span>
-                                            </a>
+                                                    Зарегистрировался новый пользователь <a href="profile.html">Denwebart</a>.
+                                                </span>
+                                            </div>
                                             <a href="#" class="delete-button">
                                                 <i class="fa fa-close"></i>
                                             </a>
                                         </div>
                                         <div class="item notification">
-                                            <a href="#">
+                                            <div>
                                                 <i class="fa fa-trash danger"></i>
                                                 <span class="small-text date">2 д. назад</span>
                                                 <span class="text">
-                                            Ваш вопрос был удален.
-                                        </span>
-                                            </a>
+                                                    Ваш вопрос "Как быть?" был удален.
+                                                </span>
+                                            </div>
                                             <a href="#" class="delete-button">
                                                 <i class="fa fa-close"></i>
                                             </a>
