Все пользователи сайта.

--- a/app/profile-articles.html
+++ b/app/profile-articles.html
@@ -89,6 +89,7 @@
                 <li><a href="category.html"><span>Гараж</span></a></li>
                 <li><a href="questions.html"><span>Вопрос-ответ</span></a></li>
                 <li><a href="articles.html"><span>Бортовой журнал</span></a></li>
+            <li><a href="users.html"><span>Пользователи</span></a></li>
             </ul>
 
             <div class="title">Информация</div>
@@ -499,8 +500,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="articles.html">
                                                 <span>Бортовой журнал</span>
+                                            </a>
+                                        </li>
+                                    <li>
+                                            <a href="users.html">
+                                                <span>Пользователи</span>
                                             </a>
                                         </li>
                                     </ul>
@@ -1092,6 +1098,7 @@
                                 <li><a href="category.html">Гараж</a></li>
                                 <li><a href="questions.html">Вопрос-ответ</a></li>
                                 <li><a href="articles.html">Бортовой журнал</a></li>
+                            <li><a href="users.html">Пользователи</a></li>
                             </ul>
                         </nav>
                     </div>
