--- a/app/page.html
+++ b/app/page.html
@@ -506,8 +506,13 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="articles.html">
                                                 <span>Бортовой журнал</span>
+                                            </a>
+                                        </li>
+                                    <li>
+                                            <a href="users.html">
+                                                <span>Пользователи</span>
                                             </a>
                                         </li>
                                     </ul>
@@ -1326,6 +1331,7 @@
                                 <li><a href="category.html">Гараж</a></li>
                                 <li><a href="questions.html">Вопрос-ответ</a></li>
                                 <li><a href="articles.html">Бортовой журнал</a></li>
+                            <li><a href="users.html">Пользователи</a></li>
                             </ul>
                         </nav>
                     </div>
