Все пользователи сайта (адаптивность).

--- a/app/users.html
+++ b/app/users.html
@@ -180,10 +180,12 @@
 
                             <div class="pull-right">
                                 <div class="user-panel">
-                                    <!--<div><span class="visible-lg">LG</span></div>
+                                    <!---->
+                                    <div><span class="visible-lg">LG</span></div>
                                     <div><span class="visible-md">MD</span></div>
                                     <div><span class="visible-sm">SM</span></div>
-                                    <div><span class="visible-xs">XS</span></div>-->
+                                    <div><span class="visible-xs">XS</span></div>
+                                    <!---->
 
                                     <div class="notifications pull-left dropdown">
                                         <a href="#" class="notification dropdown-button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
