Все пользователи сайта (адаптивность). Адаптивность сортировки.

--- a/app/articles.html
+++ b/app/articles.html
@@ -599,7 +599,7 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего<span class="hidden-xxs"> вопросов</span>:
+                                    Всего<span class="hidden-xs"> вопросов</span>:
                                     <span class="count">34</span>
                                 </div>
                                 <div class="sort">
