--- a/app/profile-notifications.html
+++ b/app/profile-notifications.html
@@ -708,7 +708,7 @@
                                 <div class="blog with-filters">
                                     <div class="filters">
                                         <div class="on-page">
-                                            Всего<span class="hidden-xxs"> уведомлений</span>:
+                                            Всего<span class="hidden-xs"> уведомлений</span>:
                                             <span class="count">11</span>
                                         </div>
                                     </div>
