--- a/app/search.html
+++ b/app/search.html
@@ -666,7 +666,7 @@
                         <div class="blog search-result with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего<span class="hidden-xxs"> результатов</span>:
+                                    Всего<span class="hidden-xs"> результатов</span>:
                                     <span class="count">121</span>
                                 </div>
                                 <div class="sort">
