--- a/app/category.html
+++ b/app/category.html
@@ -652,7 +652,7 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего<span class="hidden-xxs"> статей</span>:
+                                    Всего<span class="hidden-xs"> статей</span>:
                                     <span class="count">121</span>
                                 </div>
                                 <div class="sort">
