--- a/app/profile-cars.html
+++ b/app/profile-cars.html
@@ -708,7 +708,7 @@
                                 <div class="blog with-filters">
                                     <div class="filters">
                                         <div class="on-page">
-                                            Всего<span class="hidden-xxs"> автомобилей</span>:
+                                            Всего<span class="hidden-xs"> автомобилей</span>:
                                             <span class="count">2</span>
                                         </div>
                                     </div>
