--- a/app/profile-questions.html
+++ b/app/profile-questions.html
@@ -717,7 +717,7 @@
                                 <div class="blog with-filters">
                                     <div class="filters">
                                         <div class="on-page">
-                                            Всего<span class="hidden-xxs"> вопросов</span>:
+                                            Всего<span class="hidden-xs"> вопросов</span>:
                                             <span class="count">21</span>
                                         </div>
                                         <div class="sort">
