--- a/app/users.html
+++ b/app/users.html
@@ -181,10 +181,10 @@
                             <div class="pull-right">
                                 <div class="user-panel">
                                     <!---->
-                                    <div><span class="visible-lg">LG</span></div>
-                                    <div><span class="visible-md">MD</span></div>
-                                    <div><span class="visible-sm">SM</span></div>
-                                    <div><span class="visible-xs">XS</span></div>
+                                    <!--<div><span class="visible-lg">LG</span></div>-->
+                                    <!--<div><span class="visible-md">MD</span></div>-->
+                                    <!--<div><span class="visible-sm">SM</span></div>-->
+                                    <!--<div><span class="visible-xs">XS</span></div>-->
                                     <!---->
 
                                     <div class="notifications pull-left dropdown">
@@ -597,13 +597,13 @@
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
-                                    Всего<span class="hidden-xxs"> пользователей</span>:
+                                    Всего<span class="hidden-xs"> пользователей</span>:
                                     <span class="count">3 124</span>
                                 </div>
                                 <div class="sort">
                                     <span>Сортировать по:</span>
                                     <div class="sortby dropdown">
-                                        <a href="#" class="dropdown-button dropdown-arrow">рейтингу</a>
+                                        <a href="#" class="dropdown-button dropdown-arrow">количеству комментариев</a>
                                         <div class="dropdown-container">
                                             <div class="container-body">
                                                 <ul class="select-list">
@@ -694,7 +694,7 @@
                                         </span>
                                     </div>
                                     <div class="statistic articles">
-                                        <span class="count">45</span>
+                                        <span class="count">1 345</span>
                                         <span class="title">статей</span>
                                     </div>
                                     <div class="statistic questions">
